swagger
post, get de estações e users
TODO: métodos update
