# Source/backend/swagger_server/models/station_location.py
@@ -1,88 +1,0 @@
-# coding: utf-8
-
-from __future__ import absolute_import
-from datetime import date, datetime  # noqa: F401
-
-from typing import List, Dict  # noqa: F401
-
-from swagger_server.models.base_model_ import Model
-from swagger_server import util
-
-
-class StationLocation(Model):
-    """NOTE: This class is auto generated by the swagger code generator program.
-
-    Do not edit the class manually.
-    """
-    def __init__(self, latitude: float=None, longitude: float=None):  # noqa: E501
-        """StationLocation - a model defined in Swagger
-
-        :param latitude: The latitude of this StationLocation.  # noqa: E501
-        :type latitude: float
-        :param longitude: The longitude of this StationLocation.  # noqa: E501
-        :type longitude: float
-        """
-        self.swagger_types = {
-            'latitude': float,
-            'longitude': float
-        }
-
-        self.attribute_map = {
-            'latitude': 'latitude',
-            'longitude': 'longitude'
-        }
-        self._latitude = latitude
-        self._longitude = longitude
-
-    @classmethod
-    def from_dict(cls, dikt) -> 'StationLocation':
-        """Returns the dict as a model
-
-        :param dikt: A dict.
-        :type: dict
-        :return: The station_location of this StationLocation.  # noqa: E501
-        :rtype: StationLocation
-        """
-        return util.deserialize_model(dikt, cls)
-
-    @property
-    def latitude(self) -> float:
-        """Gets the latitude of this StationLocation.
-
-
-        :return: The latitude of this StationLocation.
-        :rtype: float
-        """
-        return self._latitude
-
-    @latitude.setter
-    def latitude(self, latitude: float):
-        """Sets the latitude of this StationLocation.
-
-
-        :param latitude: The latitude of this StationLocation.
-        :type latitude: float
-        """
-
-        self._latitude = latitude
-
-    @property
-    def longitude(self) -> float:
-        """Gets the longitude of this StationLocation.
-
-
-        :return: The longitude of this StationLocation.
-        :rtype: float
-        """
-        return self._longitude
-
-    @longitude.setter
-    def longitude(self, longitude: float):
-        """Sets the longitude of this StationLocation.
-
-
-        :param longitude: The longitude of this StationLocation.
-        :type longitude: float
-        """
-
-        self._longitude = longitude
